# spoon

./: Cargo.toml  LICENSE-MIT  Makefile  index.html  index.scss  wasm-build.dockerfile
src/: main.rs
src/app/: mod.rs  recipe_edit.rs  recipe_list.rs  recipe_window.rs  recipes.rs  search_pane.rs  settings.rs  status_bar.rs
src/app/ingredients/: create.rs  edit.rs  list.rs  list_item.rs  mod.rs  show.rs
src/app/recipes/: mod.rs  recipe_list.rs  recipe_window.rs  search_pane.rs  window.rs
src/app/recipes/edit/: context.rs  dependency_add.rs  dependency_edit.rs  mod.rs  requirement_add.rs  requirement_edit.rs  tag_add.rs  tag_edit.rs
src/app/recipes/list/: create_button.rs  element.rs  filters.rs  mod.rs  search_pane.rs
src/app/recipes/recipe_edit/: dependency_add.rs  dependency_edit.rs  mod.rs  requirement_add.rs  requirement_edit.rs  tag_add.rs  tag_edit.rs
