[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
yew-hooks = "0.2.0"
ladle = { version="0.3", git="https://github.com/spoutn1k/ladle" }
web-sys = "0.3.60"
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.33"
unidecode = "0.3.0"
pulldown-cmark = "0.9.2"
futures = "0.3.25"
chrono = "0.4.23"
yew-router = "0.17.0"
